--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -593,17 +593,18 @@ footer {
 }
 .opinions {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   padding-bottom: 5%;
-  margin-top: 2%;
+  margin-top: 3%;
   gap: 5%;
+}
+.opinions .article-opinion {
+  margin-bottom: 1rem;
 }
 .opinions .article-opinion .people {
   border-radius: 50%;
   width: 80px;
-  margin-left: 40%;
   margin-bottom: 5%;
 }
 .opinions .article-opinion .name {
@@ -618,7 +619,7 @@ footer {
   color: rgb(148, 148, 148);
   font-size: 0.8rem;
   text-align: center;
-  line-height: 1.8;
+  line-height: 1.5;
 }
 
 .checkout-container {
